<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_insert_dummy_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_dummy_data" />

        <Button
            android:id="@+id/btn_delete_data_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_database" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edt_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:inputType="date"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edt_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frequency"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_habit" />

        <Button
            android:id="@+id/btn_read_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_habits" />
    </LinearLayout>

</LinearLayout>